<resources>

    <string name="app_name">Miniature Bottles</string>
    <string name="add_bottle">Add Bottle</string>
    <string name="show_bottle">Show Bottle</string>
    <string name="show_all_bottles">Show All Bottles</string>
    <string name="select_image">Select Image</string>
    <string name="continent">Continent</string>
    <string name="note">Note</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="material">Material</string>
    <string name="colour">Colour</string>
    <string name="shape">Shape</string>
    <string name="name">Name</string>
    <string name="shell">Shell</string>
    <string name="age">Age</string>
    <string name="content">Content</string>
    <string name="alcohol">Alcohol</string>
    <string name="alcohol_type">Alcohol Type</string>
    <string name="id">ID</string>
    <string name="bottle_image">Bottle Image</string>
    <string name="send_bottle">Send Bottle</string>
    <string name="clear_fields">Clear Fields</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="url_web_app">http://bottlewebapp.apphb.com/Serialized/Post</string>
    <string name="error">Error!</string>
    <string name="parse_error_message">Age or ID is not a number!</string>
    <string name="ok">OK</string>
    <string name="server_error">Server Error!</string>
    <string name="bottle_add_failed">Bottle was NOT added successfully!</string>
    <string name="add_successful">Successful!</string>
    <string name="bottle_add_succeed">Bottle was added successfully!</string>
    <string name="sending">Sending!</string>
    <string name="sending_message">Sending to server!</string>
    <string name="select_image_intent_type">image/*</string>
    <string name="cancel">Cancel</string>
    <string name="enter_bottle_id">Enter bottle ID!</string>
    <string name="please_enter_bottle_id">Please enter bottle ID.</string>
    <string name="please_wait">Please wait!</string>
    <string name="getting_bottle_info">Getting bottle info!</string>
    <string name="url_get_bottle">http://bottlewebapp.apphb.com/Serialized/Index/</string>
    <string name="url_get_bottle_image">http://bottlewebapp.apphb.com/Serialized/GetImageBase/</string>
    <string name="bottleid">BottleID</string>
    <string name="no_bottle">No bottle was get.</string>
    <string name="id_">"ID: "</string>
    <string name="alcohol_type_">"Alcohol Type: "</string>
    <string name="alcohol_">"Alcohol: "</string>
    <string name="content_">"Content: "</string>
    <string name="age_">"Age: "</string>
    <string name="shell_">"Shell: "</string>
    <string name="name_">"Name: "</string>
    <string name="shape_">"Shape: "</string>
    <string name="colour_">"Colour: "</string>
    <string name="material_">"Material: "</string>
    <string name="manufacturer_">"Manufacturer: "</string>
    <string name="city_">"City: "</string>
    <string name="country_">"Country: "</string>
    <string name="note_">"Note: "</string>
    <string name="continent_">"Continent: "</string>
    <string name="all_bottles">http://bottlewebapp.apphb.com/Serialized/</string>

</resources>