<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/txtId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id" />

        <EditText
            android:id="@+id/txtAlcoholType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alcohol_type" />

        <EditText
            android:id="@+id/txtAlcohol"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alcohol" />

        <EditText
            android:id="@+id/txtContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content" />

        <EditText
            android:id="@+id/txtAge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age" />

        <EditText
            android:id="@+id/txtShell"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shell" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/txtShape"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shape" />

        <EditText
            android:id="@+id/txtColour"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/colour" />

        <EditText
            android:id="@+id/txtMaterial"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/material" />

        <EditText
            android:id="@+id/txtManufacturer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/manufacturer" />

        <EditText
            android:id="@+id/txtCity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city" />

        <EditText
            android:id="@+id/txtCountry"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country" />

        <EditText
            android:id="@+id/txtNote"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note" />

        <EditText
            android:id="@+id/txtContinent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/continent" />

        <ImageView
            android:id="@+id/imgBottleImage"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bottle_image"
            android:scaleType="centerInside" />

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_image" />
    </LinearLayout>

</ScrollView>