<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnAddBottle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/add_bottle"/>

    <Button
        android:id="@+id/btnShowBottle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_bottle" />    
    
    <Button
        android:id="@+id/btnShowAllBottles"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_all_bottles" />

</LinearLayout>